--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
         <title>Relationale Algebra</title>
         <meta charset="utf-8"/>
         <link rel="icon" href="favico.ico">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/elements.css">
+        <link id="mainStyle" rel="stylesheet" href="css/main.css">
+        <link id="elementStyle" rel="stylesheet" href="css/elements.css">
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="row m-0 p-0 w-100 h-100">
@@ -31,6 +32,7 @@
                     <div class="row w-100 h-100 m-0 p-0 d-flex justify-content-center align-items-center">
                         <button class="btn btn-success m-2" style="width: 50px;" onclick="saveTree();"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
                         <button class="btn btn-success m-2" style="width: 50px;" onclick="loadTree();"><i class="fa fa-file-text" aria-hidden="true"></i></button>
+                        <button class="btn btn-success m-2" style="width: 50px;" onclick="showSettings();"><i class="fa fa-cogs" aria-hidden="true"></i></button>
                     </div>
                     <div class="algebra-element col-12" onmousedown="addElement(this,false,true);">
                         <p class="symbol">Relation</p>
@@ -78,6 +80,20 @@
                 <div class="editor-wrapper">
                 </div>
             </div>
+
+            <div id="window-overlay" style="display: none; opacity: 0; pointer-events: none;"></div>
+            <div class="settings-window" style="display: none; opacity: 0; pointer-events: none;">
+                <div class="header">Settings:<div class="close-btn" onmousedown="closeSettings();"><i class="fa fa-times" aria-hidden="true"></i></div></div>
+                <div class="content">
+                    <div class="option">
+                        <span>Animations:</span>
+                        <label class="switch">
+                            <input type="checkbox" id="animation-toggle">
+                            <span class="slider round"></span>
+                        </label>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <input id="file-input" type="file" name="name" style="display: none;" />
@@ -86,6 +102,7 @@
         <script src="js/jquery-ui.js"></script>
         <script src="js/jquery-connect/required/script/jquery.connectingLine.js"></script>
         <script src="bootstrap/js/bootstrap.bundle.js"></script>
+        <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
         <script src="js/fontawesome.js" crossorigin="anonymous"></script>
         <script src="js/editor.js"></script>
         <script>
@@ -94,6 +111,7 @@
     <script>
         var currentMaxZIndex = 9;
         var dragDistance = 1000;
+        var animationsEnabled = true;
 
         function uuidv4() {
             return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
@@ -101,7 +119,69 @@
             );
         }
 
+        function swapStyleSheet(sheetId,sheet) {
+            document.getElementById(sheetId).setAttribute("href", "css/"+sheet);  
+        }
+        
+        function loadSettings(){
+            if (localStorage.getItem("animationsEnabled") !== null) {
+                var anim = localStorage.getItem("animationsEnabled");
+                if(anim == "true"){
+                    animationsEnabled = true;
+                    swapStyleSheet("mainStyle","main.css");
+                    swapStyleSheet("elementStyle","elements.css");
+                } else {
+                    animationsEnabled = false;
+                    swapStyleSheet("mainStyle","mainanimdisabled.css");
+                    swapStyleSheet("elementStyle","elementsanimdisabled.css");
+                }
+            }
+
+            $("#animation-toggle").prop('checked',animationsEnabled);
+        }
+
+        function showSettings(){
+            $("#window-overlay").css('display','flex');
+            $("#window-overlay").css('pointer-events','all');
+            $("#window-overlay").animate({opacity: 1});
+            $(".settings-window").css('display','flex');
+            $(".settings-window").css('pointer-events','all');
+            $(".settings-window").animate({opacity: 1});
+        }
+
+        function closeSettings(){
+            $("#window-overlay").animate({opacity: 0},function(){
+                $(this).css('display','none');
+                $(this).css('pointer-events','none');
+            });
+
+            $(".settings-window").animate({opacity: 0},function(){
+                $(this).css('display','none');
+                $(this).css('pointer-events','none');
+            });
+        }
+
         $(document).ready(function(){
+            $('#animation-toggle').change(function() {
+                if(this.checked){
+                    animationsEnabled = true;
+                    swapStyleSheet("mainStyle","main.css");
+                    swapStyleSheet("elementStyle","elements.css");
+                } else {
+                    animationsEnabled = false;
+                    swapStyleSheet("mainStyle","mainanimdisabled.css");
+                    swapStyleSheet("elementStyle","elementsanimdisabled.css");
+                }
+
+                if(animationsEnabled === true){
+                    $("#animation-toggle").addClass('checked');
+                } else {
+                    $("#animation-toggle").removeClass('checked');
+                }
+
+                localStorage.setItem('animationsEnabled',animationsEnabled);
+            }); 
+            loadSettings();
             const fileSelector = document.getElementById('file-input');
             fileSelector.addEventListener('change', (event) => {
                 const fileList = event.target.files;
@@ -326,10 +406,15 @@
             if(e.which === 1){
                 $(".element.selected").each(function(){
                     $(this).addClass('delete');
-                    $(this).animate({opacity: 0},500,function(){
+                    if(animationsEnabled){
+                        $(this).animate({opacity: 0},500,function(){
+                            this.parentElement.removeChild(this);
+                            countSelected();
+                        });
+                    } else {
                         this.parentElement.removeChild(this);
                         countSelected();
-                    });
+                    }
                 });
             }
         }
