--- a/relational-algebra/index.html
+++ b/relational-algebra/index.html
@@ -104,6 +104,13 @@
             </div>
         </div>
 
+        <div class="drop-zone">
+            <div class="drop-border">
+                <i class="fa fa-file" aria-hidden="true"></i>
+                <p>Drag and Drop your .tree file here.</p>
+            </div>
+        </div>
+
         <input id="file-input" type="file" name="name" style="display: none;" />
         
         <script src="../js/jquery-3.6.0.js"></script>
@@ -126,6 +133,36 @@
         var tutorialActive = false;
         var enjoyhint_instance = "";
         var tutorialElement = "";
+        var lastTarget = "";
+
+        window.addEventListener("dragenter", function(e)
+        {
+            e.stopPropagation();
+            console.log("dragged");
+            lastTarget = e.target; // cache the last target here
+            // unhide our dropzone overlay
+            document.querySelector(".drop-zone").style.visibility = "visible";
+            document.querySelector(".drop-zone").style.opacity = 1;
+            document.querySelector(".editor-wrapper").style.visibility = "visible";
+            document.querySelector(".drop-zone").style.opacity = 1;
+        });
+
+        window.addEventListener("dragleave", function(e)
+        {
+            e.stopPropagation();
+            console.log("undragged");
+            console.log("Last Target: ",lastTarget);
+            // this is the magic part. when leaving the window,
+            // e.target happens to be exactly what we want: what we cached
+            // at the start, the dropzone we dragged into.
+            // so..if dragleave target matches our cache, we hide the dropzone.
+            // `e.target === document` is a workaround for Firefox 57
+            if(e.target === lastTarget || e.target === document)
+            {
+                document.querySelector(".drop-zone").style.visibility = "hidden";
+                document.querySelector(".drop-zone").style.opacity = 0;
+            }
+        });
 
         function tutorialConnection(){
             console.log("pressed key");
@@ -284,6 +321,27 @@
         $(document).ready(function(){
             var tutorialFinished = localStorage.getItem('tutorialFinished');
             console.log(tutorialFinished);
+            // Event Handler for dragging over area
+            $(".drop-zone").on('dragenter',function(event){
+                event.preventDefault();
+                $(".drop-zone").addClass('dragging');
+                return false;
+            });
+            // Event Handler for leaving area
+            $(".drop-zone").on('dragleave',function(event){
+                event.preventDefault();
+                $(".drop-zone").removeClass('dragging');
+                return false;
+            });
+            // if file gets dragged onto the area handle the file
+            $(".drop-zone").get(0).addEventListener('dragdrop', function (e) {
+                onFileDragged();
+            }, false);
+
+            //if file gets changed manually handle the file
+            $(".drop-zone").get(0).addEventListener('change', function (e) {
+                onFileDragged();
+            }, false);
             if(tutorialFinished === 'true'){
 
             }
