--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
             body{
                 background: url(images/repeatbg.png);
                 background-repeat: repeat;
+                min-height: 100vh;
+                min-width: 100vw;
                 background-size: 15%;
                 animation: bg-anim 100s linear infinite; /* background movement */
             }
